--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Michael's Blog</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/blog.css" rel="stylesheet">
-    <script src="js/boostrap.js"></script>
+    <script src="js/bootstrap.js"></script>
   </head>
   <body>
     <div class="blog-masthead">
