--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           </div>
           -->
           <div class="blog-post">
+            <a name="first-post"></a>
             <h2 class="blog-post-title">First Post</h2>
             <p class="blog-post-meta">January 20, 2017 by <a href="about.html#michaelbateman">Michael Bateman</a></p>
             <p>I thought I would make my first post interesting...</p>
