--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
           <!--Sample post
           <div class="blog-post">
             <h2 class="blog-post-title">Sample blog post</h2>
-            <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
+            <p class="blog-post-meta">January 1, 2014 by <a href="about.html#michaelbateman">Michael Bateman</a></p>
             <p>content...</p>
           </div>
+          <hr />
           -->
+          <div class="blog-post">
+            <h2 class="blog-post-title">Boring Saturday</h2>
+            <p class="blog-post-meta">January 21, 2017 by <a href="about.html#michaelbateman">Michael Bateman</a></p>
+            <p>So I don't have much to do today, besides working on my website and yeah.  I'm planning to make a new release for my website which will include a little new content and yeah.</p>
+            <p>Rowing was fun this morning, we did a technical workout, but yeah, it was fun I guess.  In a couple of weeks we go to Tennessee!  Yay!</p>
+          </div>
+          <hr />
           <div class="blog-post">
             <a name="first-post"></a>
             <h2 class="blog-post-title">First Post</h2>
