--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="col-sm-8 blog-main">
           <!--Sample post
           <div class="blog-post">
+            <a name=""></a>
             <h2 class="blog-post-title">Sample blog post</h2>
             <p class="blog-post-meta">January 1, 2014 by <a href="about.html#michaelbateman">Michael Bateman</a></p>
             <p>content...</p>
@@ -36,6 +37,7 @@
           <hr />
           -->
           <div class="blog-post">
+            <a name="boring-saturday"></a>
             <h2 class="blog-post-title">Boring Saturday</h2>
             <p class="blog-post-meta">January 21, 2017 by <a href="about.html#michaelbateman">Michael Bateman</a></p>
             <p>So I don't have much to do today, besides working on my website and yeah.  I'm planning to make a new release for my website which will include a little new content and yeah.</p>
@@ -57,6 +59,11 @@
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>Blogging and ranting directly from Michael.</p>
+          </div>
+          <hr />
+          <div class="sidebar-module sidebar-module-inset">
+            <h4>Other Blogs</h4>
+            <p>Tech Blog - <a href="http://tech.michaelbateman.ca">tech.michaelbateman.ca</a></p>
           </div>
           <div class="sidebar-module">
             <h4>Elsewhere</h4>
