--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ layout: default
     <div class="col-sm-8 blog-main">
       {% for post in site.posts %}
         <div class="blog-post">
-          <a name=""></a>
           <h2 class="blog-post-title">{{ post.title }}</h2>
           <p class="blog-post-meta">{{ post.date | date: '%B %d, %Y' }} by <a href="{{ site.baseurl }}/about.html#michaelbateman">Michael Bateman</a>
           <p>{{ post.content }}</p>
@@ -25,6 +24,17 @@ layout: default
       <div class="sidebar-module sidebar-module-inset">
         <h4>About</h4>
         <p>Blogging and ranting directly from Michael.</p>
+      </div>
+      <br />
+      <div class="sidebar-module sidebar-module-inset">
+        <h4>Recent Posts</h4>
+        {% for post in site.posts limit:5 %}
+          <div>
+            <a href="{{ post.url }}">
+              {{ post.title }}
+            </a>
+          </div>
+        {% endfor %} 
       </div>
       <br />
       <div class="sidebar-module sidebar-module-inset">
