--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@ layout: default
               {{ post.title }}
             </a>
           </div>
-        {% endfor %} 
+        {% endfor %}
+        <div style="padding-top: 15px;">
+          <p>subscribe via <a href="{{ site.baseurl }}/feed.xml">RSS</a></p>
+        </div>
       </div>
       <br />
       <div class="sidebar-module sidebar-module-inset">
