--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
       {% for post in site.posts %}
         <div class="blog-post">
           <h2 class="blog-post-title">{{ post.title }}</h2>
-          <p class="blog-post-meta">{{ post.date | date: '%B %d, %Y' }} by <a href="{{ site.baseurl }}/about.html#michaelbateman">Michael Bateman</a>
+          <p class="blog-post-meta">{{ post.date | date: '%B %d, %Y' }} by <a href="{{ site.baseurl }}/about.html#michaelbateman">Michael Bateman</a></p>
           <p>{{ post.content }}</p>
         </div>
         <hr />
